#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([stf], [1.51.1], [https://github.com/catwise/STF/issues])
AM_INIT_AUTOMAKE(STF, 1.15.1)

# Checks for programs.
AC_PROG_F77

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#AC_CONFIG_FILES([src/Makefile])
AC_OUTPUT(Makefile src/Makefile)
